Fix padding misalignment caused by scroll bar placeholder

--- a/vizro-core/src/vizro/static/css/layout.css
+++ b/vizro-core/src/vizro/static/css/layout.css
@@ -12,7 +12,6 @@
   flex: 0 0 auto;
   flex-direction: column;
   padding: 30px 32px 0 32px;
-  scrollbar-gutter: stable;
   width: 352px;
   overflow: auto;
   gap: var(--spacing-04);
